Set style lang in App.vue to 'scss', added rule for style languages in build, webpack.base, correct information for product in json array and home product list

--- a/surfhouse/src/assets/styles/global.scss
+++ b/surfhouse/src/assets/styles/global.scss
@@ -1,3 +1,15 @@
+@import "variables";
+
+a {
+    text-decoration: none;
+}
+
 h1 {
     color:lime;
+}
+
+.label {
+    display: block;
+    background-color: $cta1;
+    color: $cta1;
 }
