set up scss colour varbiables

--- a/surfhouse/src/assets/styles/variables.scss
+++ b/surfhouse/src/assets/styles/variables.scss
@@ -1,5 +1,18 @@
-$cta1: #e24602;
+// colour variables
 
-* {
-    color:pink;
-}
+$cta1: #e24602;
+$cta2: #faef03;
+
+$primary: #26d2fc;
+$secondary: #fff51f;
+$quaternary: #fbde06;
+
+$background: #f8f8f8;
+$offwhite: #e9e9e9;
+
+$brighttoned: #373737;
+$toned:#333333;
+$darktoned: #282828;
+
+$formtext: #a39e28;
+$btn1: #000;
