--- a/surfhouse/src/assets/styles/global.scss
+++ b/surfhouse/src/assets/styles/global.scss
@@ -1,6 +1,8 @@
 @import "reset";
-@import "tabs";
+
+@import "fonts";
 @import "variables";
+@import "tabs";
 
 
 
@@ -72,7 +74,8 @@ footer {
     .cartlink {
         height: 30px;
         background-color: $background;
-        
+        font-size: 14px;
+        font-weight: 500;
 
         ul {
             padding: 5px;
@@ -80,9 +83,13 @@ footer {
                 margin-left: 30px;
                 margin-right: 5px;
                 float:left;
+
                 a {
                     color: $cta1;
                 }
+            }
+            li:last-child {
+                margin-left: 65px;
             }
         }
     }
