--- a/surfhouse/src/assets/styles/reset.scss
+++ b/surfhouse/src/assets/styles/reset.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 * {
     margin: 0;
     padding: 0;
@@ -12,3 +14,10 @@ svg {
     width: 100%;
     height: auto;
 }
+
+::selection {
+    background: $brighttoned; /* WebKit/Blink Browsers */
+  }
+  ::-moz-selection {
+    background: $brighttoned; /* Gecko Browsers */
+  }
