--- a/surfhouse/src/assets/styles/_menu.scss
+++ b/surfhouse/src/assets/styles/_menu.scss
@@ -4,6 +4,41 @@
 
     width: 270px;
 
-
     background-color: $primary;
+
+    .menutitle {
+        padding-left: 45px;
+        padding-top: 30px;
+        padding-right: 45px;
+        padding-bottom: 20px;
+
+        background-color: $toned;
+
+        font-size: 16px;
+        font-weight: 100;
+
+        color: $plain;
+    }
+
+    ul {        
+        a {
+            text-transform: uppercase;
+            font-weight: bold;
+            color: $btn1;
+
+            &:hover {
+                color: $plain;
+
+                li {
+                    background-color: $toned;
+                }                
+            }
+
+            li {
+                padding-left: 45px;
+                padding-top: 12px;
+                padding-bottom: 12px;                
+            }
+        }
+    }
 }
