--- a/surfhouse/src/assets/styles/_tags.scss
+++ b/surfhouse/src/assets/styles/_tags.scss
@@ -1,5 +1,72 @@
 @import "variables";
 
 #tags {
+
+
+    width: 270px;
+
+    
+    padding-left: 35px;
+    padding-top: 35px;
+    padding-right: 35px;
+    padding-bottom: 20px;
+
     background-color: $plain;
+
+
+    .tagstitle {
+        
+        margin-bottom: 20px;
+
+        font-size: 16px;
+        font-weight: 100;
+
+        
+        color: $btn1;
+
+        h4 {
+            text-transform: capitalize;
+        }
+    }
+
+    ul {
+        a {
+
+            text-transform: capitalize;
+            li {
+                display: inline-block;
+
+                margin-right: 3px;
+                margin-bottom: 7px;
+
+                padding-left: 13px;
+                padding-top: 8px;
+                padding-right: 13px;
+                padding-bottom: 8px;
+                
+
+                background-color: $offwhite;
+
+                
+            }
+
+            &:hover {
+                color: $btn1;
+
+                li {
+                    background-color: $cta2;
+                }                
+            }
+        }
+    }
+
+    .viewmore {
+
+        text-transform: lowercase;
+        font-size: 14px;
+        font-weight: bolder;
+        color: $btn1;
+
+    }
 }
+
