styling product gallery

--- a/surfhouse/src/assets/styles/_brands.scss
+++ b/surfhouse/src/assets/styles/_brands.scss
@@ -6,9 +6,9 @@
     flex-wrap: wrap;
 
     padding-left:6vw;
+    padding-top: 45px;
     padding-right:6vw;
     padding-bottom: 45px;
-
 
     .brand-child {
         align-self: flex-start;
