--- a/surfhouse/src/assets/styles/global.scss
+++ b/surfhouse/src/assets/styles/global.scss
@@ -64,9 +64,16 @@ h1,h2,h3,h4,h5 {
 }
 
 .productgallery {
-    background-color: lawngreen;
+    // background-color: lawngreen;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 
     .gallery-top {
+
+        width: 100%;
+
         margin-left: 20px;
         margin-right: 20px;
         margin-bottom: 30px;
@@ -78,5 +85,20 @@ h1,h2,h3,h4,h5 {
         }
     }
 
-    
+    .product {
+
+        width: 250px;
+        height: 320px;
+        align-self: flex-start;
+
+        margin-right: 30px;
+        margin-bottom: 30px;
+        padding: 10px;
+
+        background-color: $plain;
+
+    }
+
+
+
 }
