--- a/surfhouse/src/assets/styles/product.scss
+++ b/surfhouse/src/assets/styles/product.scss
@@ -17,7 +17,6 @@ label {
 }
 
 .productgallery {
-    // background-color: lawngreen;
 
     display: flex;
     justify-content: center;
@@ -97,4 +96,78 @@ label {
         }
 
     }
+}
+
+#product-parent {
+
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+
+
+    .product-child {
+        position: relative;
+
+        width: 50%;
+
+        align-self: flex-start;
+
+
+        &.display {
+
+            width: 391px;
+
+            .img-preview {
+            
+                width: 375px;
+                height: 375px;
+
+                margin-left: 8px;
+                margin-bottom: 15px;
+
+                background-size: auto 100%;
+                background-repeat: no-repeat;
+                
+            }
+
+            .img-gallery {
+                
+                width: 70px;
+                height: 110px;
+
+                float: left;;
+
+                margin-right: 30px;
+
+
+                background-size: auto 100%;
+                background-position: center center;
+                background-repeat: no-repeat;   
+
+            }
+            
+            .arrow {
+                
+                width:13px;
+                height: 30px;
+            
+                position: absolute;
+
+                bottom: 38px;
+
+
+                
+                &.a-left {
+                    left: 0;
+                }
+
+                &.a-right {
+                    right: 0;
+                }
+            }
+        }
+
+        
+    }
+
 }
