--- a/surfhouse/src/assets/styles/product.scss
+++ b/surfhouse/src/assets/styles/product.scss
@@ -1,8 +1,11 @@
 @import "variables";
 
 
-
-
+.altprice {
+    text-decoration: line-through;
+    color: $cta1;
+    font-size:16px;
+}
 
 label {
     text-transform: uppercase;
@@ -70,11 +73,7 @@ label {
             padding-right: 10px;
         }
 
-        .altprice {
-            text-decoration: line-through;
-            color: $cta1;
-            font-size:16px;
-        }        
+        
 
         .label {
             position:absolute;
@@ -115,6 +114,31 @@ label {
         width: 50%;
 
         align-self: flex-start;
+
+        .product-description {
+            background-color: lightgreen;
+
+            #title {
+                margin-bottom:55px;
+                font-size: 22px;
+            }
+
+            #price {
+                margin-bottom:25px;
+                font-size: 20px;
+            }
+
+            .hr {
+                display: block;
+
+                margin-left: 30px;
+                margin-right: 30px;
+                margin-bottom: 25px;
+                
+                border-bottom: 1px solid $btn1;
+            }
+
+        }
 
 
         &.display {
