styled product description

--- a/surfhouse/src/assets/styles/_header.scss
+++ b/surfhouse/src/assets/styles/_header.scss
@@ -102,7 +102,7 @@ header {
                     &[type=text] {
                         width: 230px;
                         height: 35px;
-                        background-color: $background;
+                        background-color: $offwhite;
                         font-size: 12px;
                         text-transform: uppercase;
                     }
