--- a/surfhouse/src/assets/styles/product.scss
+++ b/surfhouse/src/assets/styles/product.scss
@@ -107,6 +107,7 @@ label {
     justify-content: flex-start;
     flex-wrap: wrap;
 
+    color: $toned;
 
     .product-child {
         position: relative;
@@ -116,7 +117,7 @@ label {
         align-self: flex-start;
 
         .product-description {
-            background-color: lightgreen;
+            // background-color: lightgreen;
 
             #title {
                 margin-bottom:55px;
@@ -124,7 +125,7 @@ label {
             }
 
             #price {
-                margin-bottom:25px;
+                margin-bottom:5px;
                 font-size: 20px;
             }
 
@@ -132,10 +133,78 @@ label {
                 display: block;
 
                 margin-left: 30px;
+                margin-top: 20px;
                 margin-right: 30px;
-                margin-bottom: 25px;
+                margin-bottom: 20px;
                 
-                border-bottom: 1px solid $btn1;
+                border-bottom: 1px solid $offwhite;
+            }
+
+            .subtitle {
+                margin-bottom:12px;
+                font-size: 14px;
+            }
+
+
+            ul.array {
+                li {
+                    display: inline-block;
+
+                    padding-left:7px;
+                    padding-top:10px;
+                    padding-right:7px;
+                    padding-bottom:10px;
+                    
+                    background-color: $offwhite;
+                }
+            }
+
+            form {
+
+                .meme {
+                    margin-right: 80px;
+                    color: $offwhite;
+                }
+
+                input {
+    
+                    &[type=number] {
+                        width: 30px;
+                        height: 25px;
+
+                        
+
+                        background-color: $offwhite;
+                        font-size: 12px;
+                        text-transform: uppercase;
+                        text-align: center;
+                    }
+    
+                    &[type=submit] {
+                        width: 130px;
+                        height: 48px;
+                        
+                    border: none;
+                        color: $plain;
+                        background-color: $cta1;
+
+                        text-transform: uppercase;
+                    }
+                    
+                }
+            }
+
+            .cart-settings {
+                position: absolute;
+                bottom: 0px;
+                right: 0;
+                li {
+                    button {
+                        border: none;
+                        background-color: transparent;
+                        font-size: 10px;
+                    }
+                }
             }
 
         }
@@ -144,6 +213,8 @@ label {
         &.display {
 
             width: 391px;
+
+            margin-right: 40px;
 
             .img-preview {
 
