styled contact form

--- a/surfhouse/src/assets/styles/_footer.scss
+++ b/surfhouse/src/assets/styles/_footer.scss
@@ -110,6 +110,7 @@ footer {
                         &[type=text] {
                             width: 65%;
                             height: 35px;
+                            padding: 13px;
                             background-color: $secondary;
                             font-size: 12px;
                             color: $formtext;
