--- a/surfhouse/src/assets/styles/_header.scss
+++ b/surfhouse/src/assets/styles/_header.scss
@@ -102,6 +102,7 @@ header {
                     &[type=text] {
                         width: 230px;
                         height: 35px;
+                        padding: 13px;
                         background-color: $offwhite;
                         font-size: 12px;
                         text-transform: uppercase;
