--- a/surfhouse/src/assets/styles/reset.scss
+++ b/surfhouse/src/assets/styles/reset.scss
@@ -29,3 +29,13 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+
+textarea {
+    resize: none;
+  }
+
+  input {
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;  
+  }
