pre carousel commit

--- a/surfhouse/src/assets/styles/product.scss
+++ b/surfhouse/src/assets/styles/product.scss
@@ -58,6 +58,8 @@ label {
 
         img {
             width: 100%;
+            height: auto;
+            max-height: 230px;
             margin-bottom: 25px;
         }
 
