--- a/surfhouse/src/assets/styles/_menu.scss
+++ b/surfhouse/src/assets/styles/_menu.scss
@@ -8,7 +8,7 @@
 
     background-color: $primary;
 
-    .menutitle {
+    .title {
         padding-left: 45px;
         padding-top: 30px;
         padding-right: 45px;
