--- a/surfhouse/src/assets/styles/reset.scss
+++ b/surfhouse/src/assets/styles/reset.scss
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family:'Roboto', sans-serif;
+    font-family:'Roboto', sans-serif !important;
 
     transition:ease-in-out .08s;
 }
