--- a/surfhouse/src/assets/styles/global.scss
+++ b/surfhouse/src/assets/styles/global.scss
@@ -57,9 +57,11 @@ h1,h2,h3,h4,h5 {
     }
 }
 
-
-.placeholder {
+#fuckingbootstrap {
     display: none;
+}
+.placeholder {
+    // display: none;
     margin-bottom: 75px;
     img {
         width: 100%;
